# postbuckling

./: .gitignore  Abaqus Instruction.docx  CMakeLists.txt  README.md  buckling.py  buckling_optimization.py  buckling_optimization_run.py  fe_utils.py  jobs.sbatch  node_filter.py  run.sh  test.py  xdsm.py
src/: G.h  K.h  converter.h  warpper.cpp
utils/: eigenvector_derivatives.py  plot_history.py  save.py  utils.py
